# Iris-Codec-JavaScript

./: CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: emcmake.yml
docker/: Dockerfile.linux  docker-compose.yml  run-linux-build.sh
examples/: slide-viewer.html  tile-viewer.html
src/: EmscriptenCompat.hpp  IrisCodecContext.cpp  IrisCodecEmscripten.cpp  IrisCodecFile.cpp
